--- a/package.json
+++ b/package.json
@@ -32,5 +32,10 @@
     "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/jsdom": "^21.1.6",
+    "jsdom": "^23.0.1",
+    "slugify": "^1.6.6"
+  }
 }
